--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -3,7 +3,8 @@
     {
       "path": "force-app",
       "default": true
-    }
+    },
+    { "path" : "manifest" }
   ],
   "name": "flightApp",
   "namespace": "",
